--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.96MB/s(Youtube:不良林), server: 13.230.223.109, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-225.2KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇭🇰 香港-5.11MB/s(Youtube:不良林), server: hk.funan.space, port: 443, type: vmess, uuid: 071a2d80-1f59-4ad1-8eaa-50d335e8a0e2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /0567e1d44aa0969/, ws-headers: {Host: hk.funan.space}}
-  - {name: 🇬🇧 英国-2.94MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇭 瑞士-2.84MB/s(Youtube:不良林), server: 185.126.116.125, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-488.0KB/s(Youtube:不良林), server: 45.61.174.36, port: 31325, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.16MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-357.8KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇰🇷 韩国-4.65MB/s(Youtube:不良林), server: 3.36.63.45, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-477.2KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
   - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-933.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.11MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-2.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-488.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
       - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
