--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-225.2KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-2.16MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-357.8KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇰🇷 韩国-4.65MB/s(Youtube:不良林), server: 3.36.63.45, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-5.62MB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇨🇳 中国-477.2KB/s(Youtube:不良林), server: 521hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 521hk.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-759.9KB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.03MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-3.15MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
+  - {name: 🇬🇧 英国-2.94MB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-933.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
   - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-225.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-4.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-759.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.15MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.94MB/s(Youtube:不良林)
       - 🇨🇳 中国-933.9KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1021.1KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-333.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
