--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.47MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-357.8KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-3.37MB/s(Youtube:不良林), server: dajbxus.naikonode.top, port: 15105, type: ssr, cipher: chacha20-ietf, password: NaikoCloud, protocol: auth_aes128_md5, obfs: http_simple, protocol-param: 1596:vsqvobohcqs, obfs-param: 6371f1596.microsoft.com}
-  - {name: 🇯🇵 日本-2.88MB/s(Youtube:不良林), server: 54.248.212.174, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-476.8KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 🇬🇧 英国-382.1KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-388.5KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-647.8KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
   - {name: 🇯🇵 日本-565.3KB/s(Youtube:不良林), server: 13.230.172.77, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-2.19MB/s(Youtube:不良林), server: 13.230.223.109, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇰🇷 韩国-2.27MB/s(Youtube:不良林), server: 15.165.18.17, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇰🇷 韩国-598.9KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇺🇸 美国-471.7KB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
+  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: 65.49.210.47, port: 10895, type: vmess, uuid: 51a66487-e65e-47cb-8c6d-6054bb29a5f7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-357.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
-      - 🇬🇧 英国-647.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.27MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-598.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
