--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-476.8KB/s(Youtube:不良林), server: 139.219.130.70, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇬🇧 英国-382.1KB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-388.5KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-565.3KB/s(Youtube:不良林), server: 13.230.172.77, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇺🇸 美国-471.7KB/s(Youtube:不良林), server: 34.217.102.91, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
+  - {name: 🇸🇬 新加坡-1.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-218.5KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: 65.49.210.47, port: 10895, type: vmess, uuid: 51a66487-e65e-47cb-8c6d-6054bb29a5f7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-476.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-382.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-565.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-451.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-471.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
