--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇬🇧 英国-155.3KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
   - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 54.213.250.111, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: 43.154.77.196, port: 38539, type: vmess, uuid: a379bd7f-9d0d-4fb5-90c2-9b302782c4d6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [43.154.77.196]}}}
-  - {name: 🇸🇬 新加坡-1.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇺🇸 美国-218.5KB/s(Youtube:不良林), server: 45.61.173.125, port: 31224, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林), server: 213.183.53.177, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
   - {name: 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇬🇧 英国-155.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-575.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-218.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.79MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.87MB/s(Youtube:不良林)
